--- a/Views/HelloWorld/Index.cshtml
+++ b/Views/HelloWorld/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    <title>@ViewData["Title"] - Movie App</title>
 }
 
-<h2>Index</h2>
+<h2>My Movie List</h2>
 <p>Hello from our View Template!</p>
